Fix code text color in dark mode

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -9,6 +9,7 @@
   --pill-background-color-hover: #858585;
   --pill-background-color-inactive: #eee;
   --pill-text-color-inactive: #999;
+  --code-text-color: #333;
   color-scheme: light dark;
 }
 
@@ -21,6 +22,7 @@
       --pill-background-color-hover: #555;
       --pill-background-color-inactive: #eee;
       --pill-text-color-inactive: #777;
+      --code-text-color: #333;
   }
 }
 
